--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,3 +17,10 @@ h1, h2, h3, h4 {
 p {
   text-wrap: pretty;
 }
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
