--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,8 @@
 body {
   min-height: 100dvh;
   --blue-main: #1760A5;
-  --color-text-bold: #475569;
+  --color-bold-text: #475569;
+  --color-thin-text: #73777F;
 }
 
 h1, h2, h3, h4 {
