feat/CA-2.2: add styles font Blue button component

--- a/src/styles/components/BlueButton.module.css
+++ b/src/styles/components/BlueButton.module.css
@@ -6,4 +6,6 @@
     background-color: var(--blue-main);
     color: #FFF;
     border: none;
+    font-family: 'Montserrat';
+    font-size: 16px;
 }
