--- a/src/styles/components/login/LoginLayout.module.css
+++ b/src/styles/components/login/LoginLayout.module.css
@@ -1,8 +1,12 @@
-.container {
+.loginLayout {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: fit-content;
+    width: calc(100% - 108px);
+    max-width: 1332px;
     background-color: #FFF;
     border-radius: 32px;
     box-shadow: 0px 20px 25px -5px rgba(15, 23, 42, 0.10), 0px 10px 10px 0px rgba(15, 23, 42, 0.05);
 }
+
+
+
