feat/CA-2.2: forgot password component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@ body {
   --grey-main: #545F70;
   --color-bold-text: #475569;
   --color-thin-text: #73777F;
+  --color-blue-text: #3474B0;
 }
 
 h1, h2, h3, h4 {
