--- a/src/styles/FontText.module.css
+++ b/src/styles/FontText.module.css
@@ -11,3 +11,8 @@
     font-weight: 300;
     font-size: 16px;
 }
+
+.forgotPassword {
+    font-family: 'Montserrat';
+    color: var(--color-blue-text);
+}
