feat/CA-2.2: email input component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,7 @@ body {
   --color-bold-text: #475569;
   --color-thin-text: #73777F;
   --color-blue-text: #3474B0;
+  --color-grey-input: #73777F;
 }
 
 h1, h2, h3, h4 {
