--- a/src/styles/components/Inputs.module.css
+++ b/src/styles/components/Inputs.module.css
@@ -1,4 +1,4 @@
-.email {
+.email, .password {
     border: 1px solid var(--color-grey-input);
     border-radius: 4px;
     padding: 8px 16px;
@@ -13,7 +13,14 @@
     font-size: 12px;
 }
 
+.inputIcon {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .input {
+    width: 100%;
     border:none;
     color: var(--color-grey-input);
     font-family: 'Montserrat';
