--- a/src/styles/components/forms/Inputs.module.css
+++ b/src/styles/components/forms/Inputs.module.css
@@ -1,4 +1,5 @@
 .email, .password {
+    width: 100%;
     border: 1px solid var(--color-grey-input);
     border-radius: 4px;
     padding: 8px 16px;
