chore/storybook: refactor grayButton

--- a/src/components/stories/Button/BlueButton/Button.module.css
+++ b/src/components/stories/Button/BlueButton/Button.module.css
@@ -3,9 +3,16 @@
     width: 100%;
     padding: 10px;
     border-radius: 8px;
-    background-color: var(--blue-main);
     color: #FFF;
     border: none;
     font-family: 'Montserrat';
     font-size: 16px;
+}
+
+.button--primary {
+    background-color: var(--blue-main);
+}
+
+.button--secondary {
+    background-color: var(--grey-main);
 }
