chore/scss: add mixin

--- a/src/components/stories/Buttons/Button/Button.module.scss
+++ b/src/components/stories/Buttons/Button/Button.module.scss
@@ -1,3 +1,4 @@
+@import  "../../../../../src/styles/variables/fonts.scss";
 
 .button {
     width: 100%;
@@ -6,8 +7,7 @@
     color: #FFF;
     border: none;
 
-    font-family: 'Montserrat';
-    font-size: 16px;
+    @include f--b1-regular;
 }
 
 .button--primary {
