--- a/src/components/stories/Buttons/Button/Button.module.scss
+++ b/src/components/stories/Buttons/Button/Button.module.scss
@@ -1,4 +1,4 @@
-@import  "../../../../../src/styles/variables/fonts.scss";
+@import  "@/styles/variables/fonts.scss";
 
 .button {
     width: 100%;
