feat/CA-2.2: refactor LoginPage

--- a/src/styles/FontText.module.css
+++ b/src/styles/FontText.module.css
@@ -16,4 +16,6 @@
     font-family: 'Montserrat';
     color: var(--color-blue-text);
     text-decoration: none;
-}
+} 
+
+/* // todo cambiar estas clases */
