feat/CA-2.2: add breakpoints

--- a/src/styles/variables/breakpoints.scss
+++ b/src/styles/variables/breakpoints.scss
@@ -1,14 +1,14 @@
-$bpSxsMin: 0;
-$bpSsMin: 340;
-$bpSmMin: 480;
-$bpMdMin: 750;
-$bpDtMin: 1024;
-$bpDtLMin: 1440;
-$bpDtXLMin: 1920;
+$bpSxsMin: 0px;
+$bpSsMin: 340px;
+$bpSmMin: 480px;
+$bpMdMin: 768px;
+$bpDtMin: 1024px;
+$bpDtLMin: 1440px;
+$bpDtXLMin: 1920px;
 
-$bpSxsMax: 339;
-$bpSsMax: 479;
-$bpSmMax: 749;
-$bpMdMax: 1023;
-$bpDtMax: 1439;
-$bpDtLMax: 1919;
+$bpSxsMax: 339px;
+$bpSsMax: 479px;
+$bpSmMax: 767px;
+$bpMdMax: 1023px;
+$bpDtMax: 1439px;
+$bpDtLMax: 1919px;
