--- a/src/components/pages/login/layouts/LoginLayoutDesktop/LoginLayoutDesktop.module.scss
+++ b/src/components/pages/login/layouts/LoginLayoutDesktop/LoginLayoutDesktop.module.scss
@@ -6,6 +6,8 @@
     background-color: #FFF;
     border-radius: 32px;
     box-shadow: 0px 20px 25px -5px rgba(15, 23, 42, 0.10), 0px 10px 10px 0px rgba(15, 23, 42, 0.05);
+
+    padding: 64px 16px;
 }
 
 
