--- a/src/components/stories/Inputs/InputTextPassword/InputTextPassword.module.scss
+++ b/src/components/stories/Inputs/InputTextPassword/InputTextPassword.module.scss
@@ -1,4 +1,6 @@
-.email, .password {
+@import  "@/styles/variables/fonts.scss";
+
+.password {
     width: 100%;
     border: 1px solid var(--color-grey-input);
     border-radius: 4px;
@@ -10,8 +12,8 @@
 
 .label {
     color: var(--color-blue-text);
-    font-family: 'Montserrat';
-    font-size: 12px;
+    
+    @include f--b2-light;
 }
 
 .inputIcon {
@@ -24,8 +26,8 @@
     width: 100%;
     border:none;
     color: var(--color-grey-input);
-    font-family: 'Montserrat';
-    font-size: 14px;
+    
+    @include f--b1-light;
 }
 
 .input:focus {
