--- a/src/styles/variables/fonts.scss
+++ b/src/styles/variables/fonts.scss
@@ -18,6 +18,14 @@
     line-height: $size * 1.5;
 }
 
+._f--b2{
+    @extend ._f;
+    $size: 0.75rem;
+    
+    font-size: $size;
+    line-height: $size * 1.5;
+}
+
 @mixin f--b1-bold{
     @extend ._f--b1;
     font-weight: bold;
@@ -30,5 +38,20 @@
 
 @mixin f--b1-light{
     @extend ._f--b1;
+    font-weight: lighter;
+}
+
+@mixin f--b2-bold{
+    @extend ._f--b2;
+    font-weight: bold;
+}
+
+@mixin f--b2-regular{
+    @extend ._f--b2;
+    font-weight: normal;
+}
+
+@mixin f--b2-light{
+    @extend ._f--b2;
     font-weight: lighter;
 }
