feat/CA-2.2: adds fonts

--- a/src/components/stories/Inputs/Inputs.module.scss
+++ b/src/components/stories/Inputs/Inputs.module.scss
@@ -1,4 +1,5 @@
-//TODO
+@import  "@/styles/variables/fonts.scss";
+
 .email, .password {
     width: 100%;
     border: 1px solid var(--color-grey-input);
@@ -11,8 +12,8 @@
 
 .label {
     color: var(--color-blue-text);
-    font-family: 'Montserrat';
-    font-size: 12px;
+    
+    @include f--b2-light;
 }
 
 .inputIcon {
@@ -25,8 +26,8 @@
     width: 100%;
     border:none;
     color: var(--color-grey-input);
-    font-family: 'Montserrat';
-    font-size: 14px;
+    
+    @include f--b1-light;
 }
 
 .input:focus {
