--- a/src/components/stories/Inputs/Inputs.module.scss
+++ b/src/components/stories/Inputs/Inputs.module.scss
@@ -1,4 +1,5 @@
 @import  "@/styles/variables/fonts.scss";
+@import  "@/styles/variables/breakpoints.scss";
 
 .email, .password {
     width: 100%;
@@ -26,8 +27,13 @@
     width: 100%;
     border:none;
     color: var(--color-grey-input);
+    background-color: #FAF9FD;
     
     @include f--b1-light;
+
+    @media (min-width: $bpMdMin) {
+        background-color: #FFF;
+    }
 }
 
 .input:focus {
