feat/CA-2.2: signupContainer

--- a/src/components/stories/Inputs/Inputs.module.scss
+++ b/src/components/stories/Inputs/Inputs.module.scss
@@ -31,7 +31,7 @@
     
     @include f--b1-light;
 
-    @media (min-width: $bpMdMin) {
+    @media (min-width: $bpDtMin) {
         background-color: #FFF;
     }
 }
