--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,7 @@ body {
   --color-thin-text: #73777F;
   --color-blue-text: #3474B0;
   --color-grey-input: #73777F;
+  --color-background-image-login: #D3E3FF;
 }
 
 h1, h2, h3, h4 {
