feat/CA-2.2: create alert component

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,6 +16,10 @@ body {
   --color-blue-text: #3474B0;
   --color-grey-input: #73777F;
   --color-background-image-login: #D3E3FF;
+  --alert-danger:#FEF2F2;
+  --alert-warning: #FFFBEB;
+  --icon-danger: #FEE2E2;
+  --icon-warging: #FEF3C7;
 }
 
 h1, h2, h3, h4 {
