--- a/src/components/pages/login/components/LoginContainer/LoginContainer.module.scss
+++ b/src/components/pages/login/components/LoginContainer/LoginContainer.module.scss
@@ -1,4 +1,5 @@
 @import  "@/styles/variables/fonts.scss";
+@import  "@/styles/variables/breakpoints.scss";
 
 .container {
     display: flex;
@@ -6,8 +7,10 @@
     justify-content: center;
     align-items: center;
     gap: 32px;
-    /* padding: 76px 108px; */
-
+ 
+    @media (min-width: $bpDtMin) {
+        margin: 0 64px;
+    }
     .title{
         color: var(--color-bold-text);
         @include f--b1-bold;
