--- a/src/components/stories/LineStep/LineStep.module.scss
+++ b/src/components/stories/LineStep/LineStep.module.scss
@@ -2,11 +2,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
 
     .step{
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        &:first-child{
+            flex-basis: 0%;
+        }
 
         .icon{
             display: flex;
@@ -16,13 +21,13 @@
             padding: 10px;
             border: 2px solid var(--blue-main);
             background-color: rgb(211,227,255,.4);
-            height: 48px;
+            min-height: 48px;
         }
         .col{ 
             background-repeat: repeat-y;
             background-position: bottom;
             width: 2px;
-            height: 92px;
+            height: 100%;
             
             background-image: linear-gradient(to right, var(--blue-main) 100%, var(--blue-main) 100%);
             background-size: 2px 92px;
@@ -37,16 +42,37 @@
         &--error{
             .icon{
                 background-color: rgb(249,241,241, 0.8);
-                border-color: red;
+                border-color: var(--red-main);
             }
 
             .col{
-                background-image: linear-gradient(to right, red 100%, red 100%);
+                background-image: linear-gradient(to right, var(--red-main) 100%, var(--red-main)ed 100%);
 
                 &--dash{
-                    background-image: linear-gradient(to bottom, red 60%, rgba(255, 255, 255, 0) 0%);
+                    background-image: linear-gradient(to bottom, var(--red-main) 60%, rgba(255, 255, 255, 0) 0%);
                 }
             }
+        }
+    }
+
+    &--2{
+        .step{
+            flex-basis: 100%;
+        }
+    }
+    &--3{
+        .step{
+            flex-basis: 50%;
+        }
+    }
+    &--4{
+        .step{
+            flex-basis: 25%;
+        }
+    }
+    &--5{
+        .step{
+            flex-basis: 12.25%;
         }
     }
 }
