--- a/src/components/stories/Inputs/Inputs.module.scss
+++ b/src/components/stories/Inputs/Inputs.module.scss
@@ -1,7 +1,7 @@
 @import  "@/styles/variables/fonts.scss";
 @import  "@/styles/variables/breakpoints.scss";
 
-.email, .password {
+.email, .password, .text {
     width: 100%;
     border: 1px solid var(--color-grey-input);
     border-radius: 4px;
