feat/CA-3.1: add color prop

--- a/src/components/stories/Icon/Icon.module.scss
+++ b/src/components/stories/Icon/Icon.module.scss
@@ -1,11 +1,17 @@
 .IconWp {
   svg {
-    * {
-      //   fill: var(--red-icon-fill);
-      //   stroke: var(--red-icon-stroke);
+    color: var(--grey-main);
+  }
 
-      //   fill: var(--blue-icon-fill);
-      //   stroke: var(--blue-icon-stroke);
+  &--success {
+    svg {
+      color: var(--blue-main);
+    }
+  }
+
+  &--error {
+    svg {
+      color: var(--red-main);
     }
   }
 }
