--- a/src/components/stories/LineStep/LineStep.module.scss
+++ b/src/components/stories/LineStep/LineStep.module.scss
@@ -1,78 +1,93 @@
-.LineStepWp{
+.LineStepWp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+
+  .step {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
 
-    .step{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        &:first-child{
-            flex-basis: 0%;
-        }
-
-        .icon{
-            display: flex;
-            align-items: center;
-
-            border-radius: 16px;
-            padding: 10px;
-            border: 2px solid var(--blue-main);
-            background-color: rgb(211,227,255,.4);
-            min-height: 48px;
-        }
-        .col{ 
-            background-repeat: repeat-y;
-            background-position: bottom;
-            width: 2px;
-            height: 100%;
-            
-            background-image: linear-gradient(to right, var(--blue-main) 100%, var(--blue-main) 100%);
-            background-size: 2px 92px;
-    
-            &--dash{
-                background-image: linear-gradient(to bottom, var(--blue-main) 60%, rgba(255, 255, 255, 0) 0%);
-                background-size: 2px 8px;
-            }
-    
-        }
-
-        &--error{
-            .icon{
-                background-color: rgb(249,241,241, 0.8);
-                border-color: var(--red-main);
-            }
-
-            .col{
-                background-image: linear-gradient(to right, var(--red-main) 100%, var(--red-main)ed 100%);
-
-                &--dash{
-                    background-image: linear-gradient(to bottom, var(--red-main) 60%, rgba(255, 255, 255, 0) 0%);
-                }
-            }
-        }
+    &:first-child {
+      flex-basis: 0%;
     }
 
-    &--2{
-        .step{
-            flex-basis: 100%;
-        }
+    .icon {
+      display: flex;
+      align-items: center;
+
+      border-radius: 16px;
+      padding: 10px;
+      border: 2px solid var(--blue-main);
+      background-color: rgb(211, 227, 255, 0.4);
+      min-height: 48px;
     }
-    &--3{
-        .step{
-            flex-basis: 50%;
-        }
+    .col {
+      background-repeat: repeat-y;
+      background-position: bottom;
+      width: 2px;
+      height: 100%;
+
+      background-image: linear-gradient(
+        to right,
+        var(--blue-main) 100%,
+        var(--blue-main) 100%
+      );
+      background-size: 2px 92px;
+
+      &--dash {
+        background-image: linear-gradient(
+          to bottom,
+          var(--blue-main) 60%,
+          rgba(255, 255, 255, 0) 0%
+        );
+        background-size: 2px 8px;
+      }
     }
-    &--4{
-        .step{
-            flex-basis: 25%;
+
+    &--error {
+      .icon {
+        background-color: rgb(249, 241, 241, 0.8);
+        border-color: var(--red-main);
+      }
+
+      .col {
+        background-image: linear-gradient(
+          to right,
+          var(--red-main) 100%,
+          var(--red-main) ed 100%
+        );
+
+        &--dash {
+          background-image: linear-gradient(
+            to bottom,
+            var(--red-main) 60%,
+            rgba(255, 255, 255, 0) 0%
+          );
         }
+      }
     }
-    &--5{
-        .step{
-            flex-basis: 12.25%;
-        }
+  }
+
+  &--2 {
+    .step {
+      flex-basis: 100%;
     }
+  }
+  &--3 {
+    .step {
+      flex-basis: 50%;
+    }
+  }
+  &--4 {
+    .step {
+      flex-basis: 25%;
+    }
+  }
+  &--5 {
+    .step {
+      flex-basis: 12.25%;
+    }
+  }
 }
