feat/CA-3.1: update LineStep

--- a/src/components/stories/Steps/LineStep/LineStep.module.scss
+++ b/src/components/stories/Steps/LineStep/LineStep.module.scss
@@ -16,6 +16,7 @@
     .icon {
       display: flex;
       align-items: center;
+      justify-content: center;
 
       height: 48px;
       width: 48px;
