--- a/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutDesktop/RetrievePasswordLayoutDesktop.module.scss
+++ b/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutDesktop/RetrievePasswordLayoutDesktop.module.scss
@@ -1,25 +1,28 @@
-.retrievePassword {
-    display: grid;
-    grid-template-columns: 1fr 2fr 3fr;
-    width: calc(100% - 108px);
-    max-width: 1332px;
+.container {
     background-color: #FFF;
-    border-radius: 32px;
     box-shadow: 0px 20px 25px -5px rgba(15, 23, 42, 0.10), 0px 10px 10px 0px rgba(15, 23, 42, 0.05);
-    padding: 64px 0;
+    max-width: 1332px;
+    border-radius: 32px;
+    margin: 24px;
+    padding: 32px 0 32px 32px;
+
+    .retrievePassword {
+        display: flex;
+
+        .stepts {
+            width: 200px;
+            margin-left: 16px;
+        }
     
-    .logoStepts {
-        background-color: red;
+        .image {
+            min-width: 300px;
+            max-width: 464px;
+            position: relative;
+            margin: 0 64px 80px 64px;
+        }
     }
-
-    .form {
-        background-color: yellow;
-    }
-
-    .image {
-        background-color: green;
-    }
+    
+    
 }
-
 
 
