feat/CA-3.1: add lineSteps to retrievePasswordLayoutDesktop component

--- a/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutDesktop/RetrievePasswordLayoutDesktop.module.scss
+++ b/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutDesktop/RetrievePasswordLayoutDesktop.module.scss
@@ -8,10 +8,11 @@
 
     .retrievePassword {
         display: flex;
+        padding-top: 16px;
 
         .stepts {
             width: 200px;
-            margin-left: 16px;
+            height: 336px;
         }
     
         .image {
