--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,6 +19,8 @@ body {
   --warning-container: #fef3c7;
 
   --grey-main: #545f70;
+  --grey-container: #F5F5F5;
+
   --color-bold-text: #475569;
   --color-thin-text: #73777f;
   --color-blue-text: #3474b0;
