--- a/src/components/stories/Inputs/InputBase/InputBase.module.scss
+++ b/src/components/stories/Inputs/InputBase/InputBase.module.scss
@@ -10,6 +10,24 @@
   gap: 4px;
   flex-direction: column;
 
+  /* Change Autocomplete styles in Chrome*/
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    -webkit-text-fill-color: var(--color-grey-input);
+    -webkit-box-shadow: 0 0 0px 10px transparent inset;
+    transition: background-color 600000s 0s, color 600000s 0s;
+  }
+  input::-ms-reveal {
+    display: none;
+  }
+
   .label {
     color: var(--color-blue-text);
 
