--- a/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutMobile/RetrievePasswordLayoutMobile.module.scss
+++ b/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutMobile/RetrievePasswordLayoutMobile.module.scss
@@ -1,7 +1,9 @@
 .retrievePasswordMobile {
     display: flex;
+    align-items: center;
     flex-direction: column;
-    gap: 8px;
-
+    gap: 24px;
+    width: 100%;
+    max-width: 464px;
     margin: 0 16px;
 }
