--- a/src/components/stories/templates/LayoutStepDesktop/LayoutStepDesktop.module.scss
+++ b/src/components/stories/templates/LayoutStepDesktop/LayoutStepDesktop.module.scss
@@ -1,4 +1,5 @@
 .container {
+  height: 100%;
   background-color: #fff;
   box-shadow: 0px 20px 25px -5px rgba(15, 23, 42, 0.1),
     0px 10px 10px 0px rgba(15, 23, 42, 0.05);
@@ -8,12 +9,13 @@
   padding: 32px 0 32px 32px;
 
   .retrievePassword {
+    height: calc(100% - 80px);
     display: flex;
     padding-top: 16px;
 
     .stepts {
       width: 200px;
-      height: 336px;
+      height: 100%;
     }
 
     .image {
