feat/CA-3.1: add form property

--- a/src/components/stories/templates/LayoutStepDesktop/LayoutStepDesktop.module.scss
+++ b/src/components/stories/templates/LayoutStepDesktop/LayoutStepDesktop.module.scss
@@ -18,6 +18,12 @@
       height: 100%;
     }
 
+    .forms {
+      min-width: 300px;
+      max-width: 464px;
+      margin-top: 16px;
+    }
+
     .image {
       min-width: 300px;
       max-width: 464px;
