feat/CA-3.1:add  layoutMobile

--- a/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutMobile/RetrievePasswordLayoutMobile.module.scss
+++ b/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutMobile/RetrievePasswordLayoutMobile.module.scss
@@ -1,9 +1,7 @@
 .retrievePasswordMobile {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 24px;
-    width: 100%;
-    max-width: 464px;
-    margin: 0 16px;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
