--- a/src/components/stories/templates/LayoutMobile/LayoutMobile.module.scss
+++ b/src/components/stories/templates/LayoutMobile/LayoutMobile.module.scss
@@ -4,13 +4,16 @@
   flex-direction: column;
   gap: 24px;
   height: 100%;
-  margin: 32px 16px 0 16px;
+  padding: 32px 16px 16px 16px;
 
   .logoContainer {
     margin-right: 64px;
   }
 
   .formContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: calc(100% - 80px);
   }
 }
