--- a/src/components/pages/login/layouts/LoginLayoutDesktop/LoginLayoutDesktop.module.scss
+++ b/src/components/pages/login/layouts/LoginLayoutDesktop/LoginLayoutDesktop.module.scss
@@ -1,25 +1,30 @@
 .loginLayout {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: calc(100% - 108px);
-    max-width: 1332px;
-    background-color: #FFF;
-    border-radius: 32px;
-    box-shadow: 0px 20px 25px -5px rgba(15, 23, 42, 0.10), 0px 10px 10px 0px rgba(15, 23, 42, 0.05);
-    padding: 64px 0;
-    position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: calc(100% - 108px);
+  max-width: 1332px;
+  background-color: #fff;
+  border-radius: 32px;
+  box-shadow: 0px 20px 25px -5px rgba(15, 23, 42, 0.1),
+    0px 10px 10px 0px rgba(15, 23, 42, 0.05);
+  padding: 64px 0;
+  position: relative;
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px 0;
+  }
 }
 
 .loginLayout::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%; 
-    height: 100%; 
-    background-color: var(--color-background-image-login);
-    border-radius: 0 32px 32px 0;
-  }
-
-
-
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: var(--color-background-image-login);
+  border-radius: 0 32px 32px 0;
+}
