--- a/src/components/pages/login/layouts/LoginLayoutMobile/LoginLayoutMobile.module.scss
+++ b/src/components/pages/login/layouts/LoginLayoutMobile/LoginLayoutMobile.module.scss
@@ -1,7 +1,6 @@
 .loginLayoutMobile {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-
-    margin: 0 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  height: 100%;
 }
