feat/CA-3.1: retrieve password sent email component

--- a/src/components/stories/atoms/Steps/LineStep/LineStep.module.scss
+++ b/src/components/stories/atoms/Steps/LineStep/LineStep.module.scss
@@ -91,7 +91,7 @@
         background-image: linear-gradient(
           to right,
           var(--blue-main) 100%,
-          var(--blue-main) ed 100%
+          var(--blue-main) 100%
         );
 
         &--dash {
