--- a/src/components/stories/templates/LayoutStepDesktop/LayoutStepDesktop.module.scss
+++ b/src/components/stories/templates/LayoutStepDesktop/LayoutStepDesktop.module.scss
@@ -1,4 +1,5 @@
 .container {
+  width: fit-content;
   background-color: #fff;
   box-shadow: 0px 20px 25px -5px rgba(15, 23, 42, 0.1),
     0px 10px 10px 0px rgba(15, 23, 42, 0.05);
