feat/CA-3.1: refactor retrievePassword page

--- a/src/components/stories/templates/LayoutMobile/LayoutMobile.module.scss
+++ b/src/components/stories/templates/LayoutMobile/LayoutMobile.module.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   gap: 24px;
   height: 100%;
+  max-width: 405px;
   padding: 32px 16px 16px 16px;
 
   .logoContainer {
