--- a/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutMobile/RetrievePasswordLayoutMobile.module.scss
+++ b/src/components/pages/retrievePassword/layouts/RetrievePasswordLayoutMobile/RetrievePasswordLayoutMobile.module.scss
@@ -1,7 +1,16 @@
 .retrievePasswordMobile {
   display: flex;
-  height: 100%;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
+  height: 100%;
+  justify-content: space-between;
+  gap: 16px 0;
+
+  .content {
+    height: 95%;
+  }
+
+  .steps {
+    height: auto;
+  }
 }
