--- a/src/components/stories/templates/LayoutMobile/LayoutMobile.module.scss
+++ b/src/components/stories/templates/LayoutMobile/LayoutMobile.module.scss
@@ -6,6 +6,8 @@
   height: 100%;
   max-width: 405px;
   padding: 32px 16px 16px 16px;
+  box-shadow: 0px 20px 25px -5px rgba(15, 23, 42, 0.1),
+    0px 10px 10px 0px rgba(15, 23, 42, 0.05);
 
   .logoContainer {
     margin-right: 64px;
