--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,6 +9,8 @@
 
 body {
   min-height: 100dvh;
+  background-color: #faf9fd;
+
   --blue-main: #1760a5;
   --blue-container: #f1f5f9;
 
@@ -19,7 +21,7 @@ body {
   --warning-container: #fef3c7;
 
   --grey-main: #545f70;
-  --grey-container: #F5F5F5;
+  --grey-container: #f5f5f5;
 
   --color-bold-text: #475569;
   --color-thin-text: #73777f;
