--- a/src/components/stories/atoms/Inputs/InputBase/InputBase.module.scss
+++ b/src/components/stories/atoms/Inputs/InputBase/InputBase.module.scss
@@ -36,6 +36,7 @@
 
   .inputContainer {
     display: flex;
+    gap: 8px;
     align-items: center;
     justify-content: space-between;
     .input {
