feat/CA-3.5: layout

--- a/src/components/pages/login/components/FormLogin/FormLogin.module.scss
+++ b/src/components/pages/login/components/FormLogin/FormLogin.module.scss
@@ -9,7 +9,15 @@
   width: 100%;
 
   @media (min-width: $bpMdMin) {
+    padding: 0 32px;
+  }
+
+  @media (min-width: $bpDtMin) {
     padding: 0 64px;
+  }
+
+  @media (min-width: $bpDtMin) {
+    padding: 0 128px;
   }
 
   .title {
