--- a/src/components/pages/login/components/SignupContainer/SignupContainer.module.scss
+++ b/src/components/pages/login/components/SignupContainer/SignupContainer.module.scss
@@ -6,9 +6,9 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  margin: auto;
+  width: 100%;
   img {
-    max-height: 357px;
+    height: 367px !important;
   }
 }
 
@@ -30,6 +30,7 @@
 
 .container button {
   width: 80%;
+  max-width: 310px;
   z-index: 1;
   margin-top: 16px;
 }
