feat/CA-3.1: retrieve error desktop

--- a/src/components/stories/atoms/Steps/LineStep/LineStep.module.scss
+++ b/src/components/stories/atoms/Steps/LineStep/LineStep.module.scss
@@ -65,7 +65,7 @@
         background-image: linear-gradient(
           to right,
           var(--red-main) 100%,
-          var(--red-main) ed 100%
+          var(--red-main) 100%
         );
 
         &--dash {
