--- a/src/components/stories/molecules/ErrorMsg/ErrorMsg.module.scss
+++ b/src/components/stories/molecules/ErrorMsg/ErrorMsg.module.scss
@@ -1,10 +1,14 @@
 @import "@/styles/variables/fonts.scss";
+@import "@/styles/variables/breakpoints.scss";
 
 .text {
-  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 32px;
+
+  @media (min-width: $bpMdMin) {
+    height: 100%;
+  }
 
   &__bold {
     color: var(--color-bold-text);
