feat/CA-1.2: error onboarding component mobile and desktop

--- a/src/components/stories/molecules/ErrorMsg/ErrorMsg.module.scss
+++ b/src/components/stories/molecules/ErrorMsg/ErrorMsg.module.scss
@@ -21,4 +21,14 @@
 
     @include f--b1-light;
   }
+
+  img {
+    position: relative !important;
+    margin: auto;
+    max-width: 320px;
+
+    @media (min-width: $bpMdMin) {
+      display: none;
+    }
+  }
 }
