--- a/src/components/stories/atoms/Inputs/Dropdown/Dropdown.module.scss
+++ b/src/components/stories/atoms/Inputs/Dropdown/Dropdown.module.scss
@@ -60,32 +60,6 @@
 
   .dropdown {
     display: none;
-    font-size: 0.8em;
-    padding: 0.3em 1em;
-    background-color: red;
-    cursor: pointer;
-
-    background-color: white;
-    border: 1px solid blue;
-    border-radius: 0 0 5px 5px;
-    border-top: none;
-    font-family: sans-serif;
-    width: 350px;
-    padding: 5px;
-  }
-
-  option {
-    background-color: white;
-    padding: 4px;
-    color: blue;
-    margin-bottom: 1px;
-    font-size: 18px;
-    cursor: pointer;
-  }
-
-  option:hover,
-  .active {
-    background-color: lightblue;
   }
 
   &--open {
@@ -93,7 +67,28 @@
       position: absolute;
       display: block;
       width: 100%;
-      z-index: 10;
+
+      background-color: white;
+      border: 1px solid var(--color-grey-input);
+      border-radius: 0 0 5px 5px;
+      border-top: none;
+
+      option {
+        padding: 8px 16px;
+        color: var(--color-grey-input);
+        @include f--b1-light;
+        cursor: pointer;
+        &:hover {
+          background-color: #f2f2f2;
+        }
+        &:last-child {
+          border-radius: 0 0 5px 5px;
+        }
+      }
+
+      .active {
+        background-color: #f2f2f2;
+      }
     }
   }
 }
