--- a/src/components/stories/atoms/Inputs/Dropdown/Dropdown.module.scss
+++ b/src/components/stories/atoms/Inputs/Dropdown/Dropdown.module.scss
@@ -57,6 +57,14 @@
         }
       }
     }
+
+    .icons {
+      display: flex;
+      gap: 4px;
+      span {
+        cursor: pointer;
+      }
+    }
   }
 
   .dropdown {
