feat/CA-1.2: refactor

--- a/src/components/stories/atoms/Inputs/Dropdown/Dropdown.module.scss
+++ b/src/components/stories/atoms/Inputs/Dropdown/Dropdown.module.scss
@@ -60,7 +60,8 @@
 
     .icons {
       display: flex;
-      gap: 4px;
+      min-width: 48px;
+      justify-content: flex-end;
       span {
         cursor: pointer;
       }
