feat/CA-1.2: add styles

--- a/src/components/stories/atoms/PasswordValidator/PasswordValidator.module.scss
+++ b/src/components/stories/atoms/PasswordValidator/PasswordValidator.module.scss
@@ -1,34 +1,22 @@
 @import "@/styles/variables/fonts.scss";
 @import "@/styles/variables/breakpoints.scss";
 
-.text {
+.password-validator {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 16px;
 
-  @media (min-width: $bpMdMin) {
-    height: 100%;
-  }
-
-  &__bold {
-    color: var(--color-bold-text);
-
-    @include f--b1-bold;
-  }
-
-  &__thin {
+  .rule {
     color: var(--color-thin-text);
 
     @include f--b1-light;
-  }
 
-  img {
-    position: relative !important;
-    margin: auto;
-    max-width: 320px;
+    &--error {
+      color: var(--red-main);
+    }
 
-    @media (min-width: $bpMdMin) {
-      display: none;
+    &--success {
+      color: var(--success-main);
     }
   }
 }
