--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,6 +20,9 @@ body {
   --warning-main: #d97706;
   --warning-container: #fef3c7;
 
+  --success-main: #22c55e;
+  --sucess-container: #86efac;
+
   --grey-main: #545f70;
   --grey-container: #f5f5f5;
 
