--- a/src/components/pages/onboarding/passwordOnboarding/components/PasswordOnboardingForm/PasswordOnboardingForm.module.scss
+++ b/src/components/pages/onboarding/passwordOnboarding/components/PasswordOnboardingForm/PasswordOnboardingForm.module.scss
@@ -29,6 +29,10 @@
       gap: 16px;
     }
 
+    .validation {
+      margin-top: 16px;
+    }
+
     &__button {
       display: flex;
       gap: 32px;
