--- a/src/components/stories/templates/LayoutMain/LayoutMain.module.scss
+++ b/src/components/stories/templates/LayoutMain/LayoutMain.module.scss
@@ -2,6 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100dvh;
   background-color: #faf9fd;
 }
