--- a/src/components/stories/atoms/Validators/Validator/Validator.module.scss
+++ b/src/components/stories/atoms/Validators/Validator/Validator.module.scss
@@ -1,7 +1,7 @@
 @import "@/styles/variables/fonts.scss";
 @import "@/styles/variables/breakpoints.scss";
 
-.password-validator {
+.validatorGroup {
   display: flex;
   flex-direction: column;
   gap: 4px;
