--- a/src/components/pages/onboarding/emailOnboarding/components/EmailOnboardingForm/EmailOnboardingForm.module.scss
+++ b/src/components/pages/onboarding/emailOnboarding/components/EmailOnboardingForm/EmailOnboardingForm.module.scss
@@ -29,6 +29,10 @@
       gap: 16px;
     }
 
+    .validator {
+      margin-top: 16px;
+    }
+
     &__button {
       display: flex;
       gap: 32px;
