--- a/src/components/pages/resetPassword/resetPassword/components/ResetPasswordForm/ResetPasswordForm.module.scss
+++ b/src/components/pages/resetPassword/resetPassword/components/ResetPasswordForm/ResetPasswordForm.module.scss
@@ -29,10 +29,13 @@
       gap: 16px;
     }
 
+    .validation {
+      margin: 16px;
+    }
+
     &__button {
       display: flex;
       gap: 32px;
-      margin-top: 128px;
     }
   }
 }
