--- a/src/components/stories/atoms/Logo/Logo.module.scss
+++ b/src/components/stories/atoms/Logo/Logo.module.scss
@@ -1,29 +1,34 @@
 .logo {
-    display: flex;
-    align-items: flex-end;
-    position: relative;
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+  width: 150px;
 
-    .logoTitle {
-        position: absolute;
-        left: 120px;
-        
-        .titleBold {
-            color:#393E46;
-            
-            font-family: 'Montserrat';
-            font-weight: 700;
-            font-size: 17px;
-        }
-        
-        .titleThin {
-            color:#75787E;
-            
-            font-family: 'Montserrat';
-            font-weight: 500;
-            font-size: 17px;
-        }
+  .logoTitle {
+    position: absolute;
+    left: 120px;
+
+    .titleBold {
+      color: #393e46;
+
+      font-family: "Montserrat";
+      font-weight: 700;
+      font-size: 17px;
     }
-    
-   
-}
 
+    .titleThin {
+      color: #75787e;
+
+      font-family: "Montserrat";
+      font-weight: 500;
+      font-size: 17px;
+    }
+  }
+
+  &--hover {
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.1) translateX(5px);
+    }
+  }
+}
