feat/A-2.3: add layout

--- a/src/components/stories/atoms/Inputs/Dropdown/Dropdown.module.scss
+++ b/src/components/stories/atoms/Inputs/Dropdown/Dropdown.module.scss
@@ -66,6 +66,12 @@
       span {
         cursor: pointer;
       }
+
+      &--disabled{
+        span {
+          cursor: default;
+        }
+      }
     }
   }
 
