--- a/src/components/stories/templates/LayoutStepDesktop/LayoutStepDesktop.module.scss
+++ b/src/components/stories/templates/LayoutStepDesktop/LayoutStepDesktop.module.scss
@@ -22,6 +22,11 @@
       max-width: 500px;
       min-height: 300px;
       margin-top: 16px;
+
+      &--only{
+        max-width: 814px;
+        width: 814px;
+      }
     }
 
     .image {
