--- a/src/components/pages/financial-tools/compound-interest-result/components/DataCalculatorResult/DataCalculatorResult.module.scss
+++ b/src/components/pages/financial-tools/compound-interest-result/components/DataCalculatorResult/DataCalculatorResult.module.scss
@@ -14,12 +14,20 @@
   }
 
   .subtitle {
-    margin-top: 16px;
     color: var(--color-thin-text);
     @include f--b1-regular;
   }
-
+  
   .chart{
     min-height: 350px;
+    margin-bottom: 16px;
+  }
+
+  .Link {
+    margin-top: 8px;
+    text-decoration: none;
+
+    color: var(--color-blue-text);
+    @include f--b1-regular;
   }
 }
