--- a/src/components/pages/login/components/SignupContainer/SignupContainer.module.scss
+++ b/src/components/pages/login/components/SignupContainer/SignupContainer.module.scss
@@ -7,30 +7,35 @@
   justify-content: flex-end;
   align-items: center;
   width: 100%;
+  z-index: 1;
+
   img {
     height: 367px !important;
   }
-}
 
-.container img {
-  z-index: 1;
-  width: 100%;
-  height: auto;
-  padding: 16px;
-}
+  img {
+    width: 100%;
+    height: auto;
+    padding: 16px;
+  }
+  
+  p {
+    width: 80%;
+    text-align: center;
+    color: var(--grey-main);
+  
+    @include f--b1-regular;
+  }
+  
+  button {
+    width: 80%;
+    max-width: 310px;
+    margin-top: 16px;
+  }
 
-.container p {
-  width: 80%;
-  z-index: 1;
-  text-align: center;
-  color: var(--grey-main);
-
-  @include f--b1-regular;
-}
-
-.container button {
-  width: 80%;
-  max-width: 310px;
-  z-index: 1;
-  margin-top: 16px;
+  .dropdown{
+    width: 80%;
+    margin-top: 16px;
+    max-width: 310px;
+  }
 }
